fixed h2 letter spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -52,6 +52,7 @@ h1 {
 h2 {
     font-size: 2.25rem;
     font-weight: 600;
+    letter-spacing: 0.5px;
     margin-bottom: 1.4rem;
 }
 
